# MediaMixModelDemo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
MMM/Clustering/: kmeans.py
MMM/DataComms/: read_data.py
MMM/DimRed/: pca.py
MMM/OutDetect/: lof.py
