[metadata]
name = MediaMixModelDemo
version = 0.0.1
author = Bhargav Harihar, Sajal Kumar
author_email = 	bhargav.harihar@gmail.com, kumarsajal49@gmail.com
description = An illustrative media mix model implementation
#long_description = file: README.md
#long_description_content_type = text/markdown
url = https://github.com/sajal49/MediaMixModelDemo
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    setuptools
    pandas==2.1.4
    scikit-learn==1.3.2